# TheLottery

./: .gitignore  README.md  dball.sqlite  pyproject.toml  pytest.ini
data/: 2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv
src/thelottery/: __init__.py  log.py  obtain.py  spider.py
src/thelottery/db/: __init__.py  exts.py  lotterydb_init.py  models.py
src/visualanalysis/: app.py
src/visualanalysis/blueprints/: __init__.py  example.py  front.py
src/visualanalysis/blueprints/templates/: base.html  matplot.html
src/visualanalysis/templates/: base.html  index.html  matplot.html
tests/: test_obtain.py  test_spider.py
