[tool.poetry]
name = "thelottery"
version = "0.1.0"
description = ""
authors = ["xueyp <xueyp.gtd@gmail.com>"]
readme = "README.md"
packages = [{include = "thelottery", from = "src"}]

[tool.poetry.scripts]
spider = "thelottery.spider:main"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
matplotlib = "^3.9.2"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.32"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
